[gd_scene load_steps=42 format=2]

[ext_resource path="res://Fonts/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Scripts/Login and Register/EmailValidateLabel.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Scripts/Login and Register/LoginClickText.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Scripts/Login and Register/CreateGuardianAccountBtn.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Register Page Scenes/EmailVerfication.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Register Page Scenes/CreateParentAccountScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Scripts/Login and Register/BackBtn.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Scripts/Login and Register/PasswordMatchLabel.gd" type="Script" id=10]
[ext_resource path="res://Styles/White Button Style.tres" type="StyleBox" id=11]
[ext_resource path="res://Styles/Button Style Disabled.tres" type="StyleBox" id=12]
[ext_resource path="res://Styles/White Button Style Hover.tres" type="StyleBox" id=13]
[ext_resource path="res://Styles/Button Style Pressed.tres" type="StyleBox" id=14]
[ext_resource path="res://Styles/Button Style Hover.tres" type="StyleBox" id=15]
[ext_resource path="res://Styles/Button Style.tres" type="StyleBox" id=16]
[ext_resource path="res://Styles/White Button Style Pressed.tres" type="StyleBox" id=17]
[ext_resource path="res://Assets/Register Page/RegisterBackground.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=2]
size = 31
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.482353, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Image" id=31]
data = {
"data": PoolByteArray( 255, 0, 0, 0, 0, 0, 0, 42, 0, 0, 0, 179, 0, 0, 0, 245, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 245, 0, 0, 0, 179, 0, 0, 0, 42, 255, 0, 0, 0, 0, 0, 0, 42, 0, 0, 0, 249, 0, 0, 0, 108, 0, 0, 0, 16, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 16, 0, 0, 0, 108, 0, 0, 0, 249, 0, 0, 0, 42, 0, 0, 0, 179, 0, 0, 0, 108, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 108, 0, 0, 0, 179, 0, 0, 0, 245, 0, 0, 0, 16, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 16, 0, 0, 0, 245, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 255, 0, 0, 0, 245, 0, 0, 0, 16, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 16, 0, 0, 0, 245, 0, 0, 0, 179, 0, 0, 0, 108, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 108, 0, 0, 0, 179, 0, 0, 0, 42, 0, 0, 0, 249, 0, 0, 0, 108, 0, 0, 0, 16, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 0, 0, 0, 16, 0, 0, 0, 108, 0, 0, 0, 249, 0, 0, 0, 42, 255, 0, 0, 0, 0, 0, 0, 42, 0, 0, 0, 179, 0, 0, 0, 245, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 245, 0, 0, 0, 179, 0, 0, 0, 42, 255, 0, 0, 0 ),
"format": "RGBA8",
"height": 15,
"mipmaps": false,
"width": 15
}

[sub_resource type="ImageTexture" id=19]
flags = 3
flags = 3
image = SubResource( 31 )
size = Vector2( 15, 15 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=30]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[node name="ParentRegisterScreen" type="Node2D"]

[node name="RegisterBackground" type="Sprite" parent="."]
position = Vector2( 223, 409 )
texture = ExtResource( 18 )

[node name="RichTextLabel" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.815
margin_top = -343.83
margin_right = 183.185
margin_bottom = -303.83
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Create guardian account"

[node name="RichTextLabel2" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.809
margin_top = -283.682
margin_right = 70.191
margin_bottom = -261.682
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Already have a Guardian Account ?"

[node name="LoginClickText" type="Button" parent="RegisterBackground"]
margin_left = 94.4917
margin_top = -284.947
margin_right = 142.492
margin_bottom = -262.947
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "Log in"
script = ExtResource( 5 )

[node name="EmailInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -178.808
margin_top = -214.943
margin_right = 181.192
margin_bottom = -164.943
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 23 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Guardian's Email"
placeholder_alpha = 0.3

[node name="NameInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.725
margin_top = -130.944
margin_right = 182.275
margin_bottom = -80.9431
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Guardian Display Name"
placeholder_alpha = 0.3

[node name="PasswordInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.874
margin_top = -46.1459
margin_right = 182.126
margin_bottom = 3.8541
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 25 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Create Password"
placeholder_alpha = 0.3

[node name="ConfirmInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -177.727
margin_top = 40.0568
margin_right = 182.273
margin_bottom = 90.0568
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 26 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Confirm Password"
placeholder_alpha = 0.3

[node name="ToCCheckBox" type="CheckBox" parent="RegisterBackground"]
margin_left = -183.284
margin_top = 120.435
margin_right = -159.284
margin_bottom = 144.435
custom_fonts/font = SubResource( 8 )
custom_icons/unchecked = SubResource( 19 )
custom_styles/hover = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
clip_text = true

[node name="CreateGuardianAccountBtn" type="Button" parent="RegisterBackground"]
margin_left = 31.2403
margin_top = 271.058
margin_right = 201.239
margin_bottom = 321.058
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/focus = ExtResource( 14 )
custom_styles/disabled = ExtResource( 12 )
custom_styles/normal = ExtResource( 16 )
disabled = true
text = "Continue"
script = ExtResource( 6 )

[node name="RichTextLabel3" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -156.124
margin_top = 120.403
margin_right = 178.876
margin_bottom = 154.403
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "I have read and accept the Terms and Conditions and Privacy Policy."

[node name="AgeCheckBox" type="CheckBox" parent="RegisterBackground"]
margin_left = -183.283
margin_top = 167.435
margin_right = -159.283
margin_bottom = 191.435
custom_fonts/font = SubResource( 8 )
custom_icons/unchecked = SubResource( 19 )
custom_styles/hover = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
clip_text = true

[node name="RichTextLabel4" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -156.126
margin_top = 170.354
margin_right = 178.874
margin_bottom = 187.354
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "I verify that I am at least 18 years of age"

[node name="BackBtn" type="Button" parent="RegisterBackground"]
margin_left = -175.761
margin_top = 271.058
margin_right = -5.75987
margin_bottom = 321.058
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 17 )
custom_styles/normal = ExtResource( 11 )
text = "Back"
script = ExtResource( 9 )

[node name="RichTextLabel5" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.804
margin_top = -236.566
margin_right = -54.8044
margin_bottom = -214.566
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Guardian's Email"

[node name="RichTextLabel6" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.797
margin_top = -153.386
margin_right = 8.20274
margin_bottom = -131.386
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Guardian's Display Name"

[node name="RichTextLabel7" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.798
margin_top = -68.3856
margin_right = 8.20271
margin_bottom = -46.3856
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Create Password"

[node name="RichTextLabel8" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -176.797
margin_top = 18.6145
margin_right = 8.2028
margin_bottom = 40.6145
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Confirm Password"

[node name="PasswordMatchLabel" type="RichTextLabel" parent="RegisterBackground"]
visible = false
margin_left = -176.772
margin_top = 92.2443
margin_right = -48.7722
margin_bottom = 110.244
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Password must match"
script = ExtResource( 10 )

[node name="EmailValidateLabel" type="RichTextLabel" parent="RegisterBackground"]
visible = false
margin_left = -176.797
margin_top = -164.388
margin_right = -101.797
margin_bottom = -146.388
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 30 )
text = "Invalid Email"
script = ExtResource( 4 )

[node name="UserExistPopUp" type="AcceptDialog" parent="RegisterBackground"]
margin_left = 17.688
margin_top = -0.00201416
margin_right = 95.688
margin_bottom = 57.998
window_title = "Error"

[node name="EmailVerfication" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 76, 277 )

[node name="CreateParentAccountScene" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 76, 319 )
